argocd/apps/media-server/plex/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-media-server
  labels:
    app: plex-media-server
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: plex-media-server
  template:
    metadata:
      labels:
        app: plex-media-server
      annotations: {}
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
        cpu.performance: high
        nvidia.com/gpu.present: "true"
      serviceAccountName: plex-media-server
      tolerations: []
      affinity: {}
      volumes:
        - name: transcode
          hostPath:
            path: /zpool/k8s/plex/transcode
        - name: config
          hostPath:
            path: /zpool/k8s/plex/config
        - name: media
          hostPath:
            path: /data/media
      terminationGracePeriodSeconds: 120
      containers:
        - name: plex-media-server-pms
          image: index.docker.io/plexinc/pms-docker:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              nvidia.com/gpu: 1
            requests:
              nvidia.com/gpu: 1
          ports:
            - containerPort: 32400
              name: pms
          volumeMounts:
            - name: config
              mountPath: /config
            - name: transcode
              mountPath: /transcode
            - name: media
              mountPath: /data/media
