argocd/apps/media-server/plex/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex-media-server
  labels:
    name: plex-media-server
    app: plex-media-server
    app.kubernetes.io/name: plex-media-server
spec:
  serviceName: release-name-plex-media-server
  selector:
    matchLabels:
      app.kubernetes.io/name: plex-media-server
  template:
    metadata:
      labels:
        app: plex-media-server
        app.kubernetes.io/name: plex-media-server
      annotations:
        {}
    spec:
      serviceAccountName: plex-media-server
      tolerations:
        []
      nodeSelector:
        {}
      affinity:
        {}
      volumes:
      - name: pms-transcode
        emptyDir: {}
      terminationGracePeriodSeconds: 120
      containers:
      - name: plex-media-server-pms
        image: index.docker.io/plexinc/pms-docker:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 32400
          name: pms
        volumeMounts:
        - name: pms-config
          mountPath: /config
        - name: pms-transcode
          mountPath: /transcode
  volumeClaimTemplates:
  - metadata:
      name: pms-config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: nfs-storage
      resources:
        requests:
          storage: 100Gi
