argocd/apps/media-server/plex/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: plex-app
  name: plex-vs-idx-0
  namespace: plex
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
    sectionName: https
  hostnames:
  - plex.yanello.net
  rules:
  - backendRefs:
    - name: plex
      namespace: plex
      port: 32400
      weight: 0
