argocd/apps/media-server/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-media-server-ingress
  labels:
    name: release-name-plex-media-server-ingress
    app: plex-media-server
    app.kubernetes.io/name: plex-media-server
spec:
  ingressClassName: nginx
  rules:
  - host: plex.k8s.yanello.net
    http:
      paths:
      - path: '/'
        pathType: Prefix
        backend:
          service:
            name: plex-media-server
            port:
              number: 32400
  # tls:
  # - hosts:
  #   - plex.k8s.yanello.net
  #   secretName: release-name-plex-media-server-ingress-lets-encrypt
