argocd/apps/media-server/plex/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: plex-vs
spec:
  hosts:
  - plex.yanello.net
  gateways:
  - istio-system/kube-gateway
  http:
  - route:
    - destination:
        host: plex
        port:
          number: 5000
